--- a/index.html
+++ b/index.html
@@ -27,37 +27,42 @@
                     </div>
                 </div>
             </div>
-            <div>LONDON</div><br>
-            <div>canada</div><br>
-            <div >Italy</div>
+            <div class="city">LONDON</div>
+            <div class="city">canada</div>
+            <div class="city">Italy</div>
+            <div class="city">LONDON</div>
+            <div class="city">canada</div>
+            <div class="city">LONDON</div>
+            <div class="city">canada</div>
+            <div class="city">LONDON</div>
         </div>
         <div class="main">
-            <div class="City" style="height:200px;">Image</div>
+            <div class="imageCity" style="height:200px;">Image</div>
             <h2>City Name</h2>
             <br>
-            <div class="w5-row">
-                <div class="w3-third w3-center">
+            <div class="workdays">
+                <div class="weekdays">
                     <h3>MON</h3>
                     <!-- <img src="img_weather_sun.jpg" alt="sun"> -->
                 </div>
-                <div class="w3-third w3-center">
+                <div class="weekdays">
                     <h3>TUE</h3>
                     <!-- <img src="img_weather_cloud.jpg" alt="cloud"> -->
                 </div>
-                <div class="w3-third w3-center w3-margin-bottom">
+                <div class="weekdays">
                     <h3>WED</h3>
                     <!-- <img src="img_weather_clouds.jpg" alt="clouds"> -->
                 </div>
-                <div class="w3-third w3-center">
+                <div class="weekdays">
                     <h3>THUS</h3>
                     <!-- <img src="img_weather_sun.jpg" alt="sun"> -->
                 </div>
-                <div class="w3-third w3-center">
+                <div class="weekdays">
                     <h3>FRI</h3>
                     <!-- <img src="img_weather_cloud.jpg" alt="cloud"> -->
                 </div>
-            </div>
             
+            </div>
         </div>
     </div>
 
