--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
             <div class="city">LONDON</div>
         </div>
         <div class="main">
-            <div class="imageCity" style="height:200px;">Image</div>
-            <h2>City Name</h2>
+            <div class="location">
+                <div class="imageCity" style="height:200px;">Image</div>
+                <h3 class="location-timezone">TimeZone</h3>
+                <p>20/03/2021</p>
+                <p>Icon</p>
+            </div>
+            <div class="temp">
+                <h4 class="temp-deg">34</h4>
+                <div class="humidity">it is getting warmer</div>
+                <div class="wind-speed">not windy</div>
+                <div class="UV-index">normal</div>
+            </div>
             <br>
+
             <div class="workdays">
                 <div class="weekdays">
                     <h3>MON</h3>
