--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Search for city</h2>
             <div class="search-wrap">
                 <div class="search-box">
-                    <input type="text" placeholder="Search.." name="city name">
+                    <input id="searchBox" type="text" placeholder="Search.." name="city name">
                     <div class="btn">
                         <i class="fas fa-search"></i>
                     </div>
