google api added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <div class="footer">
         <h2>Footer</h2>
     </div>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhSc6WYCiZ1nW-iPPwZLgHDGVE-FlkhfA&libraries=places&callback=initMap">
+</script>
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
