--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
             <div class="city">LONDON</div>
         </div>
         <div class="main">
-            <div class="location">
+            <div class="content-box">
                 <div class="imageCity" style="height:200px;">Image</div>
-                <h3 class="location-timezone">TimeZone</h3>
+                <div class="general-information">
+                    <div class="status">Enter a location</div>
+                    <div class="location">To Find The Weather</div>
+                    <p>20/03/2021</p>
+                    <p>Icon</p>
+</div>
+                
                 <p>20/03/2021</p>
                 <p>Icon</p>
             </div>
-            <div class="temp">
+            <div class="detail-section">
                 <h4 class="temp-deg">34</h4>
                 <div class="humidity">it is getting warmer</div>
                 <div class="wind-speed">not windy</div>
