--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="search-wrap">
                 <div class="search-box">
                     <input id="searchBox" type="text" placeholder="Enter LOcation" name="city name">
-                    </div>
+                </div>
             </div>
             <div class="city">LONDON</div>
             <div class="city">canada</div>
@@ -36,32 +36,31 @@
         <div class="main">
             <div class="content-box">
                 <div class="imageCity" style="height:200px;">Image</div>
-                <div class="general-information">
-                    <div class="status">Enter a location</div>
-                    <div class="location">To Find The Weather</div>
+                <div class="general-info">
+                    <div class="status" data-location>Location</div>
                     <p>20/03/2021</p>
                     <p>Icon</p>
+                    <div class="detail-section">
+                        <div class="detail">
+                            <div class="title">Temperature</div>
+                            <div class="value" data-Temp>TBD</div>
+                        </div>
+                        <div class="detail">
+                            <div class="title">Humidity</div>
+                            <div class="value" data-Humidity>TBD</div>
+                        </div>
+                        <div class="detail">
+                            <div class="title">Wind-Speed</div>
+                            <div class="value"data-Wind>TBD</div>
+                        </div>
+                        <div class="detail">
+                            <div class="title">UV-index</div>
+                            <div class="value"data-UVindex>TBD</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="detail-section">
-                    <div class="detail">
-                        <div class="title">Temperature</div>
-                        <div class="value">TBD</div>
-                    </div>
-                    <div class="detail">
-                        <div class="title">Humidity</div>
-                        <div class="value">TBD</div>
-                    </div>
-                    <div class="detail">
-                        <div class="title">Wind-Speed</div>
-                        <div class="value">TBD</div>
-                    </div>
-                    <div class="detail">
-                        <div class="title">UV-index</div>
-                        <div class="value">TBD</div>
-                    </div>
-                    </div>
             </div>
-            
+
             <br>
 
             <div class="workdays">
