--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 <div class="imageCity" style="height:200px;">Image</div>
                 <div class="general-info">
                     <div class="status" data-location>Location</div>
-                    <p>20/03/2021</p>
-                    <p>Icon</p>
+                    <div class="summary" data-summary>Summary</div>
+                    <div data-date>20/03/2021</div>
+                    <p id="Icon">Icon</p>
                     <div class="detail-section">
                         <div class="detail">
                             <div class="title">Temperature</div>
@@ -98,6 +99,8 @@
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhSc6WYCiZ1nW-iPPwZLgHDGVE-FlkhfA&libraries=places&callback=initMap">
         </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js" 
+        integrity="sha512-ChQiOC9OBUvQ75KLv3+YRxCQLV1bSWnGfcSdaP1v3iu6XSkmge+eXCu3lcV+O+Uvdjb+LGMZd/KAvV4rkEfbzw==" crossorigin="anonymous"></script>
 </body>
 </body>
 
