--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <div class="status" data-location>Location</div>
                     <div class="summary" data-summary>Summary</div>
                     <div data-date>20/03/2021</div>
-                    <p id="Icon">Icon</p>
+                    <!-- <p id="Icon">Icon</p> -->
+                    <canvas id="Icon" width="128" height="128"></canvas>
                     <div class="detail-section">
                         <div class="detail">
                             <div class="title">Temperature</div>
@@ -93,15 +94,15 @@
     <div class="footer">
         <h2>Footer</h2>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js" 
+    integrity="sha512-ChQiOC9OBUvQ75KLv3+YRxCQLV1bSWnGfcSdaP1v3iu6XSkmge+eXCu3lcV+O+Uvdjb+LGMZd/KAvV4rkEfbzw==" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhSc6WYCiZ1nW-iPPwZLgHDGVE-FlkhfA&libraries=places&callback=initMap">
         </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js" 
-        integrity="sha512-ChQiOC9OBUvQ75KLv3+YRxCQLV1bSWnGfcSdaP1v3iu6XSkmge+eXCu3lcV+O+Uvdjb+LGMZd/KAvV4rkEfbzw==" crossorigin="anonymous"></script>
-</body>
+
 </body>
 
 </html>
