--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <input id="searchBox" type="text" placeholder="Enter LOcation" name="city name">
                 </div>
             </div>
-            <div class="city">Resent Search</div>
+            <div class="city" onclick="city1">Resent Search</div>
             <div class="city">Resent Search</div>
             <div class="city">Resent Search</div>
             <div class="city">Resent Search</div>
@@ -75,6 +75,10 @@
                         <div class="title">Temperature</div>
                         <div class="value" data-MonTemp>TBD</div>
                     </div>
+                    <div class="detail">
+                        <div class="title bordered">Humidity</div>
+                        <div class="value" data-Humidity>TBD</div>
+                    </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
                     </div>
@@ -85,6 +89,10 @@
                     <div class="detail">
                         <div class="title">Temperature</div>
                         <div class="value" data-TueTemp>TBD</div>
+                    </div>
+                    <div class="detail">
+                        <div class="title bordered">Humidity</div>
+                        <div class="value" data-Humidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
@@ -97,6 +105,10 @@
                         <div class="title">Temperature</div>
                         <div class="value" data-WedTemp>TBD</div>
                     </div>
+                    <div class="detail">
+                        <div class="title bordered">Humidity</div>
+                        <div class="value" data-Humidity>TBD</div>
+                    </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
                     </div>
@@ -108,6 +120,10 @@
                         <div class="title">Temperature</div>
                         <div class="value" data-ThusTemp>TBD</div>
                     </div>
+                    <div class="detail">
+                        <div class="title bordered">Humidity</div>
+                        <div class="value" data-Humidity>TBD</div>
+                    </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
                     </div>
@@ -118,6 +134,10 @@
                     <div class="detail">
                         <div class="title">Temperature</div>
                         <div class="value" data-FriTemp>TBD</div>
+                    </div>
+                    <div class="detail">
+                        <div class="title bordered">Humidity</div>
+                        <div class="value" data-Humidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
