ad png and put for loop

--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
             <h2>Search for city</h2>
             <div class="search-wrap">
                 <div class="search-box">
-                    <input id="searchBox" type="text" placeholder="Enter LOcation" name="city name">
+                    <input id="searchBox" type="text" placeholder="Enter Location" name="city name">
                 </div>
             </div>
-            <div class="city" onclick="city1">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
-            <div class="city">Resent Search</div>
+            <div id="recentSearches">
+        
+                
+        </div>
         </div>
         <div class="main">
             <div class="content-box">
@@ -77,7 +73,7 @@
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-Humidity>TBD</div>
+                        <div class="value" data-MonHumidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
@@ -92,7 +88,7 @@
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-Humidity>TBD</div>
+                        <div class="value" data-TueHumidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
@@ -107,7 +103,7 @@
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-Humidity>TBD</div>
+                        <div class="value" data-WedHumidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
@@ -122,7 +118,7 @@
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-Humidity>TBD</div>
+                        <div class="value" data-ThusHumidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
@@ -137,7 +133,7 @@
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-Humidity>TBD</div>
+                        <div class="value" data-FriHumidity>TBD</div>
                     </div>
                     <div class="icon-container">
                         <canvas id="Icon" width="75" height="75"></canvas>
