modified img folder and js script

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                     <div class="detail-section">
                         <div class="detail">
                             <div class="title">Temperature</div>
-                            <div class="value" data-Temp>TBD</div>
+                            <div class="value" data-Temp>TBD<span>F</span></div>
                         </div>
                         <div class="detail">
                             <div class="title bordered">Humidity</div>
-                            <div class="value" data-Humidity>TBD</div>
+                            <div class="value" data-Humidity><span>%</span></div>
                         </div>
                         <div class="detail">
                             <div class="title bordered">Wind-Speed</div>
-                            <div class="value" data-Wind>TBD</div>
+                            <div class="value" data-Wind>TBD<span>miles/hr</span></div>
                         </div>
                         <div class="detail">
                             <div class="title">UV-index</div>
@@ -69,11 +69,11 @@
                     <h3>MONDAY</h3>
                     <div class="detail">
                         <div class="title">Temperature</div>
-                        <div class="value" data-MonTemp>TBD</div>
+                        <div class="value" data-MonTemp>TDB<span>F</span></div>
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-MonHumidity>TBD</div>
+                        <div class="value" data-MonHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-day">
                         <img class="icon-mon">
@@ -84,11 +84,11 @@
                     <h3>TUESDAY</h3>
                     <div class="detail">
                         <div class="title">Temperature</div>
-                        <div class="value" data-TueTemp>TBD</div>
+                        <div class="value" data-TueTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-TueHumidity>TBD</div>
+                        <div class="value" data-TueHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
                         <img class="icon-tues">
@@ -99,11 +99,11 @@
                     <h3>WEDNESDAY</h3>
                     <div class="detail">
                         <div class="title">Temperature</div>
-                        <div class="value" data-WedTemp>TBD</div>
+                        <div class="value" data-WedTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-WedHumidity>TBD</div>
+                        <div class="value" data-WedHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
                         <img class="icon-wed">
@@ -114,11 +114,11 @@
                     <h3>THUSDAY</h3>
                     <div class="detail">
                         <div class="title">Temperature</div>
-                        <div class="value" data-ThusTemp>TBD</div>
+                        <div class="value" data-ThusTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-ThusHumidity>TBD</div>
+                        <div class="value" data-ThusHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
                         <img class="icon-thus">
@@ -129,11 +129,11 @@
                     <h3>FRIDAY</h3>
                     <div class="detail">
                         <div class="title">Temperature</div>
-                        <div class="value" data-FriTemp>TBD</div>
+                        <div class="value" data-FriTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail">
                         <div class="title bordered">Humidity</div>
-                        <div class="value" data-FriHumidity>TBD</div>
+                        <div class="value" data-FriHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
                         <img class="icon-fri">
