--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="detail-section">
                         <div class="detail">
                             <div class="title">Temperature</div>
-                            <div class="value" data-Temp>TBD<span>F</span></div>
+                            <div class="value" data-Temp>TBD<span class="faren">F</span>/<span class="cel">C</span></div>
                         </div>
                         <div class="detail">
                             <div class="title bordered">Humidity</div>
