--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="main">
             <div class="content-box">
                 <div class="imageCity" style="height:200px;">CityImage</div>
-                <div class="general-info ">
+                <div class="general-info bignight">
                     <div class="header-icon">
                     </div>
                     <div class="status" data-location>Location</div>
