--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="status" data-location>Location</div>
                     <div class="summary" data-summary>Summary</div>
-                    <div data-date>20/03/2021</div>
+                    <div style="color:white" data-date>20/03/2021</div>
                     <div class="detail-section">
                         <div class="detail">
                             <div class="title">Temperature</div>
