--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="content-box">
                 <div class="imageCity" style="height:200px;">CityImage</div>
                 <div class="general-info bignight">
-                    <div class="header-icon">
+                    <div class="icon-container">
+                        <img class="icon">
                     </div>
                     <div class="status" data-location>Location</div>
                     <div class="summary" data-summary>Summary</div>
@@ -100,7 +101,7 @@
                         <div class="value" data-WedTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail night">
-                        <div class="title bordered">Humidity</div>
+                        <div class="title ">Humidity</div>
                         <div class="value" data-WedHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
@@ -115,7 +116,7 @@
                         <div class="value" data-ThusTemp>TBD<span>F</span></div>
                     </div>
                     <div class="detail">
-                        <div class="title bordered">Humidity</div>
+                        <div class="title ">Humidity</div>
                         <div class="value" data-ThusHumidity>TBD<span>%</span></div>
                     </div>
                     <div class="icon-container-days">
