--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Weather Dashboard</h1>
         <p>A website created by Raginee.</p>
-    </div>
+    </header>
     <div class="row">
-        <div class="side">
+        <aside class="side">
             <h2>Search for city</h2>
             <div class="search-wrap">
                 <div class="search-box">
@@ -28,8 +28,8 @@
 
 
             </div>
-        </div>
-        <div class="main">
+        </aside>
+        <main class="main">
             <div class="content-box">
                 <div class="imageCity" style="height:200px;">CityImage</div>
                 <div class="general-info bignight">
@@ -65,7 +65,7 @@
 
             <br>
 
-            <div class="workdays">
+            <section class="workdays">
                 <div class="weekdays night">
                     <h3>MONDAY</h3>
                  <div class="daytemp" data-MonTemp>TDB<span>F</span></div>
@@ -127,8 +127,8 @@
 
                 </div>
                 <span class="stretch"></span>
-            </div>
-        </div>
+            </section>
+        </main>
     </div>
 
     <div class="footer">
