--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>A website created by Raginee.</p>
     </header>
     <div class="row">
+
         <aside class="side">
             <h2>Search for city</h2>
             <div class="search-wrap">
@@ -29,6 +30,7 @@
 
             </div>
         </aside>
+
         <main class="main">
             <div class="content-box">
                 <div class="imageCity" style="height:200px;">CityImage</div>
@@ -131,9 +133,9 @@
         </main>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
         <h2>Footer</h2>
-    </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js"
         integrity="sha512-ChQiOC9OBUvQ75KLv3+YRxCQLV1bSWnGfcSdaP1v3iu6XSkmge+eXCu3lcV+O+Uvdjb+LGMZd/KAvV4rkEfbzw=="
         crossorigin="anonymous"></script>
