--- a/index.html
+++ b/index.html
@@ -70,18 +70,20 @@
             <section class="workdays">
                 <div class="weekdays night">
                     <h3>MONDAY</h3>
+                    <div style="color:white" data-mondate>20/03/2021</div>
                  <div class="daytemp" data-MonTemp>TDB<span>F</span></div>
                     <div class="daydetail">
                         <div class="title bordered">Humidity</div>
                         <div class="dayvalue" data-MonHumidity>TBD<span>%</span></div>
                     </div>
-                    <div class="icon-container-day">
+                    <div class="icon-container-days">
                         <img class="icon-mon">
                     </div>
 
                 </div>
                 <div class="weekdays night">
                     <h3>TUESDAY</h3>
+                    <div style="color:white" data-tuedate>20/03/2021</div>
                 <div class="daytemp" data-TueTemp>TBD<span>F</span></div>
                       <div class="daydetail">
                         <div class="title bordered">Humidity</div>
@@ -94,6 +96,7 @@
                 </div>
                 <div class="weekdays night">
                     <h3>WEDNESDAY</h3>
+                    <div style="color:white" data-weddate>20/03/2021</div>
                 <div class="daytemp" data-WedTemp>TBD<span>F</span></div>
                     <div class="daydetail">
                         <div class="title ">Humidity</div>
@@ -106,6 +109,7 @@
                 </div>
                 <div class="weekdays night">
                     <h3>THUSDAY</h3>
+                    <div style="color:white" data-thusdate>20/03/2021</div>
                     <div class="daytemp" data-ThusTemp>TBD<span>F</span></div>
                 <div class="daydetail">
                         <div class="title ">Humidity</div>
@@ -118,6 +122,7 @@
                 </div>
                 <div class="weekdays night">
                     <h3>FRIDAY</h3>
+                    <div style="color:white" data-fridate>20/03/2021</div>
                 <div class="daytemp" data-FriTemp>TBD<span>F</span></div>
                 <div class="daydetail">
                         <div class="title bordered">Humidity</div>
