--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <main class="main">
             <div class="content-box">
-                <div class="imageCity" style="height:200px;">CityImage</div>
+                <!-- <div class="imageCity" style="height:200px;">CityImage</div> -->
                 <div class="general-info bignight">
                     <div class="status" data-location>Location</div><br>
                     <div style="color:white" data-date>20/03/2021</div>
